// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expense summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,349,293,948.29
  </h1>
</div>
`;

exports[`should render single expense summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
